schema/testdata/errors/create_inputs_nested_required_opt.keel
model Order {
    fields {
        item Text
        customer Customer
    }
    actions {
        //expect-error:16:28:ActionInputError:required field 'customer.country' must be set by providing 'customer.country.id' as an input or by using a @set expression
        create createOrder1() with (item, customer.name)
        //expect-error:16:28:ActionInputError:required field 'customer.country' must be set by providing 'customer.country.id' as an input or by using a @set expression
        create createOrder2() with (item, customer.name?)
        //expect-error:16:28:ActionInputError:required field 'customer.country' must be set by providing 'customer.country.id' as an input or by using a @set expression
        create createOrder3() with (item, customer.company.name?)
        create createOrderOnlyItem() with (item)
    }
  
}

model Customer {
    fields {
        name Text?
        country Country
        company Company?
    }
}

model Country { }

model Company { 
    fields {
        name Text?
    }
 }